<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/primaryColor"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/about_btn_downloadcenter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_downloadcenter" />

                <Button
                    android:id="@+id/about_btn_check"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_checknewversion" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/about_btn_manual"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_manual" />

                <Button
                    android:id="@+id/about_btn_lastchange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_lastchange" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/about_txt_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/about_txt_versiondate"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_mversion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/about_img_logo"
                android:layout_width="356dp"
                android:layout_height="102dp"
                android:src="@drawable/img_logo" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryColor"


                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="phone"
                    android:gravity="center"
                    android:text="03132730084"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorLink="@color/black" />

                <TextView
                    android:id="@+id/about_txt_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="phone"
                    android:gravity="center"
                    android:text="03132730744"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"
                    android:textColorLink="@color/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/about_txt_mobilecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="09132673465"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textColorLink="@color/black" />

            <TextView
                android:id="@+id/about_txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="info@parsianandroid.ir"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textColorLink="@color/black" />

            <TextView
                android:id="@+id/about_txt_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="http://www.parsianandroid.ir/"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColorLink="@color/black" />

            <TextView
                android:id="@+id/view5"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/about_address"

                android:textColor="@color/black"

                />

            <TextView
                android:id="@+id/about_txt_telegram"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_telegram"

                android:textColor="@color/primaryColor" />

            <TextView
                android:id="@+id/about_txt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_licence"
                android:textColor="@color/black"


                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/chat_txt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="45dp"
                android:gravity="center"
                android:text="CopyRight 2015-2018"
                android:textColor="@color/black"
                android:textStyle="normal|bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>