<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center"
    tools:context="ir.parsianandroid.parsianandroidres.LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/img_logo" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="@style/OwnCardView"
        android:padding="0dp">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/txt_username"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="0dp"
                                android:textColor="@color/black"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:text="آدرس سرور" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/black"
                                android:gravity="center"

                                android:text="پورت" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="http://"
                                android:textColor="@color/black" />

                            <EditText
                                android:id="@+id/txt_serveradress"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="نمونه:192.168.0.1"
                                android:inputType="textPersonName"
                                android:textColor="@color/black" />
                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:textColor="@color/black"
                                android:gravity="center"
                                android:layout_height="match_parent"
                                android:text=":" />

                            <EditText
                                android:id="@+id/txt_serverport"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="نمونه:8085"
                                android:inputType="text|textPersonName|number"
                                android:textColor="@color/black" />
                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:textColor="@color/black"
                                android:gravity="center"
                                android:layout_height="match_parent"
                                android:text="/" />
                        </TableRow>

                    </TableLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</LinearLayout>
